--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,13 @@
   "name": "fitness-tracker-app",
   "version": "1.0.0",
   "description": "The objective of the fitness tracker website is to help users track their fitness progress, set fitness goals, and stay motivated to achieve those goals.",
-  "main": "server.js",
+  "main": "app.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [
     "fitness",
